# tccwasm

./: .editorconfig  .gitignore  LICENSE  README.md  Vagrantfile  create_dataset.ps1  dataset.csv
apps/detectorsz/: CMakeLists.txt  README.md  build.ps1  build_wasm.sh  create_dataset.ps1  dataset.csv  getdataset.py  runtests.ps1  runwebapp.py
apps/detectorsz/include/detectorsz/: detectorsz.hpp  dzapp.hpp  dznative.hpp  dzwasm.hpp  dzwebapp.hpp
apps/detectorsz/src/: detectorsz_bind_js.cpp  detectorsz_helper.js  facade_js.cpp  face_detect.cpp  facedetect.cpp  facedetectapp.cpp  facedetectweb.cpp  helper.js  image_process.cpp  imageprocess.cpp  imageprocessapp.cpp  imageprocessweb.cpp  imagewrapper.cpp  main.cpp  mainapp.cpp  maintest.cpp  mat_adapter.cpp  run_workload.ps1  test.cpp  utils.cpp  webapp_facade.cpp  webapp_helper.js
apps/detectorsz/webapp/: detectorsz.html  detectorsz.js  detectorsz.wasm  detectorsz_core.data  detectorsz_core.html  detectorsz_core.js  detectorsz_core.wasm  index.html  main.css  main.html  main.js  performance.html  poc.html  test.html  test.js  test_large.html  test_main_large.html  test_main_medium.html  test_main_small.html  test_medium.html  test_small.html  webcam.html
apps/detectorsz/webapp/pocs/: poc.html  poc_webcam.html
apps/detectorsz/webapp/tests/: test_main_large.html  test_main_medium.html  test_main_small.html
apps/example1/: README.md  example1.cpp  example1.wat  example1_hex_dump.txt
apps/example2/: README.md  build.sh  example2.c  example2.h  example2.js  example2.wasm  index.html  run.py
apps/example3/: README.md  build.sh  example3.cpp  example3.hpp  example3.js  example3.wasm  example3_js.cpp  index.html
arch/: tccwam_arch.eap
docs/: benchmarks.md  environment.md  html5.md  opencv.md  project.md  review.md  wasm.md
docs/tccwasm_stats/: tccwasm_stats.md
outcomes/: LOG_FACE_DETECT_DATASET_1_LARGE_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_1_LARGE_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_1_MEDIUM_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_1_SMALL_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_1_SMALL_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_2_MEDIUM_Firefox_67_Windows.csv  LOG_FACE_DETECT_DATASET_2_MEDIUM_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_2_SMALL_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_2_SMALL_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_3_LARGE_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_3_LARGE_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_3_MEDIUM_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_3_SMALL_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_3_SMALL_Firefox_67_Windows.csv  META_LOG_FACE_DETECT.csv  META_LOG_FACE_DETECT_DATASET_1.csv  META_LOG_FACE_DETECT_DATASET_1_LARGE_Chrome_75_Windows.csv  META_LOG_FACE_DETECT_DATASET_1_LARGE_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_1_LARGE_WINDOWS_10_WIN32.csv  META_LOG_FACE_DETECT_DATASET_1_MEDIUM_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_1_MEDIUM_WINDOWS_10_WIN32.csv  META_LOG_FACE_DETECT_DATASET_2_LARGE_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_2_MEDIUM_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_2_MEDIUM_WINDOWS_10_WIN32.csv  META_LOG_FACE_DETECT_DATASET_2_SMALL_WINDOWS_10_WIN32.csv  META_LOG_FACE_DETECT_DATASET_3_LARGE_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_3_MEDIUM_Chrome_75_Windows.csv  META_LOG_FACE_DETECT_DATASET_3_MEDIUM_Firefox_67_Windows.csv  META_LOG_FACE_DETECT_DATASET_3_SMALL_WINDOWS_10_WIN32.csv  requirements.txt  tccwasm_stats.ipynb  tccwasm_stats_sbesc2020.ipynb  teste.ipynb
outcomes/data/: LOG_FACE_DETECT_DATASET_1_LARGE_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_1_LARGE_Firefox_67_Windows.csv  LOG_FACE_DETECT_DATASET_1_LARGE_Firefox_68_Windows.csv  LOG_FACE_DETECT_DATASET_1_LARGE_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_1_MEDIUM_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_1_MEDIUM_Firefox_67_Windows.csv  LOG_FACE_DETECT_DATASET_1_MEDIUM_Firefox_68_Windows.csv  LOG_FACE_DETECT_DATASET_1_MEDIUM_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_1_SMALL_Chrome_75_Windows.csv  LOG_FACE_DETECT_DATASET_1_SMALL_Firefox_67_Windows.csv  LOG_FACE_DETECT_DATASET_1_SMALL_Firefox_68_Windows.csv  LOG_FACE_DETECT_DATASET_1_SMALL_WINDOWS_10_WIN32.csv  LOG_FACE_DETECT_DATASET_1_SMALL_WINDOWS_10_WIN32_.csv  LOG_FACE_DETECT_DATASET_2_LARGE_Chrome_75_Windows.csv  (+53 more)
pocs/crosscompile/: CMakeLists.txt  README.MD  build.ps1  build.sh  build_wasm.sh
pocs/crosscompile/Solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  crosscompile.sln  crosscompile.vcxproj  crosscompile.vcxproj.filters
pocs/crosscompile/include/: mycalc.hpp
pocs/crosscompile/src/: main.cpp  myapp_js.cpp  mycalc.cpp
pocs/crosscompile/webapp/: index.html  myapp.html  myapp.js  myapp.wasm
pocs/hello/: build.sh  (+3 more)
pocs/helloopencv/: CMakeLists.txt  CMakeSettings.json  build.sh
pocs/helloopencv/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  helloopencv.sln  helloopencv.vcxproj  helloopencv.vcxproj.filters
pocs/helloopencv/include/helloopencv/: imageprocess.h  myimage.hpp  myimageproc.hpp
pocs/helloopencv/solution/: ALL_BUILD.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  helloopencv.sln  helloopencv.vcxproj  helloopencv.vcxproj.filters
pocs/helloopencv/src/: main.cpp  myimage.cpp  myimageproc.cpp  myimageproc_js.cpp  myimageproc_test.cpp  rwimg.cpp  videocap.cpp
pocs/helloopencv/webapp/: index.html  myimageproc.html  myimageproc.js  myimageproc.wasm
pocs/introwasm/mandelbrot-tiled/: CMakeLists.txt  build_wasm.sh  mandelbrot.js  mandelbrot.wasm  mandelbrot_.js  mandelbrot_.wasm
pocs/manipulatefiles/: CMakeLists.txt  build.sh
pocs/manipulatefiles/include/manipulatefiles/: filemgr.hpp
pocs/manipulatefiles/public/: filemgr.js  filemgr.wasm  minigzip.html  minigzip.js  minigzip.wasm
pocs/manipulatefiles/src/: filemgr.cpp  main.cpp  minigzip.c
scripts/: create_dataset.ps1  donwload_tools.sh  enviroment.ps1  enviroment.sh  httpserver.py  install_opencv.ps1  synctime.sh
(+13 files in other folders)
